Fix Rendering on Mobile screens

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,8 @@
 body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
+  font-family: math;
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #f0f0f0;
 }
 
@@ -20,20 +17,6 @@ body {
   height: 30px;
 }
 
-.diagram-container {
-  width: 100%;
-  max-width: 100%;
-  overflow: auto;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-svg {
-  width: 100%;
-  height: auto;
-  max-width: 100%;
-}
 
 .app-container {
   width: 100%;
